# file-editor

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: app.rs  document.rs  error.rs  explorer.rs  main.rs  model.rs
src/core/: config.rs  document.rs  error.rs  explorer.rs  mod.rs
src/core/app/: cursor.rs  editor.rs  menu.rs  mod.rs
src/gui/: commands.rs  mod.rs
src/monitor/: cpu.rs  mod.rs  ram.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/app/: cursor.rs  cursor.ts  editor.rs  menu.rs  mod.rs
src/tui/events/: keyboard.rs  mod.rs  mouse.rs  shortcut.rs  shortcuts.rs
src/tui/ui/: editor.rs  footer.rs  layout_helpers.rs  mod.rs  popup.rs  sidebar.rs
ui/: index.html
ui/css/: layout.css  theme.css
ui/js/: main.js  menu.js  state.js
